feat: container with front and back

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,15 @@ services:
       options:
         max-size: "50m" # Tamanho máximo de cada arquivo de log
         max-file: "2"   # Número máximo de arquivos de log
-    network_mode: host
-    command: ["./main","--portManagement","43038"]
     restart: unless-stopped
+    ports:
+      - "8000:8000"
+      - "8080:8080"
     environment:
       - LOG_CONFIG_PROD=true
-  
+    networks:
+       - broker
+
+networks:
+  broker:
+    driver: bridge
