--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,52 @@
 version: '3'
 
 services:
-  broker-mqtt:
+  #nginx:
+  #  container_name: nginx
+  #  image: nginx
+  #  ports:
+  #    - "1883:1883"
+  #  depends_on:
+  #    - broker-mqtt-1
+  #    - broker-mqtt-2
+  #  volumes:
+  #    - ./nginx.conf:/etc/nginx/nginx.conf
+  #  networks:
+  #     - broker
+
+  broker-mqtt-1:
     image: broker-mqtt
     build: .
-    container_name: broker-mqtt
+    container_name: broker-mqtt-1
     logging:            # Configuração de log
       options:
         max-size: "50m" # Tamanho máximo de cada arquivo de log
         max-file: "2"   # Número máximo de arquivos de log
     restart: unless-stopped
     ports:
-      - "6000:6000"
-      - "8080:8080"
+      - "8081:8080"
       - "1883:1883"
     environment:
       - LOG_CONFIG_PROD=true
+      - ADDRESS=0.0.0.0:1883
     networks:
        - broker
+
+  #broker-mqtt-2:
+  #  image: broker-mqtt
+  #  container_name: broker-mqtt-2
+  #  logging:            # Configuração de log
+  #    options:
+  #      max-size: "50m" # Tamanho máximo de cada arquivo de log
+  #      max-file: "2"   # Número máximo de arquivos de log
+  #  restart: unless-stopped
+  #  ports:
+  #    - "8082:8080"
+  #  environment:
+  #    - LOG_CONFIG_PROD=true
+  #    - ADDRESS=0.0.0.0:10002
+  #  networks:
+  #     - broker
 
   broker-management:
     image: broker-management
