--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 #Core
 ADDRESS=0.0.0.0:1883
 TIMEOUT_WRITE_MODE=5
+CONTAINER_ID=1
+
+API_GET_TOPIC=http://localhost:8080/topics
+API_POST_PUBLISH=http://localhost:8080/publisher
+API_POST_SESSION=http://localhost:8080/sessions
 
