--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@
 ADDRESS=0.0.0.0:1883
 TIMEOUT_WRITE_MODE=5
 CONTAINER_ID=1
+DB_ADDRESS="postgresql://teste:teste@192.168.68.107:5433/broker?sslmode=disable"
 
+API_ADDRESS=0.0.0.0:8080
 API_GET_TOPIC=http://localhost:8080/topics
 API_POST_PUBLISH=http://localhost:8080/publisher
 API_POST_SESSION=http://localhost:8080/sessions
