--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - broker-mqtt-2
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-    network_mode: host
+    networks:
+      - broker
 
   broker-mqtt-1:
     image: broker-mqtt
@@ -24,7 +25,6 @@ services:
     restart: unless-stopped
     ports:
       - "8081:8081"
-      - "10001:1883"
     environment:
       - LOG_CONFIG_PROD=true
       - ADDRESS=0.0.0.0:10001
@@ -33,7 +33,8 @@ services:
       - API_GET_TOPIC=http://localhost:8081/topics
       - API_POST_PUBLISH=http://localhost:8081/publisher
       - API_POST_SESSION=http://localhost:8081/sessions
-    network_mode: host
+    networks:
+      - broker
 
   broker-mqtt-2:
     image: broker-mqtt
@@ -45,7 +46,6 @@ services:
     restart: unless-stopped
     ports:
       - "8082:8082"
-      - "10002:1883"
     environment:
       - LOG_CONFIG_PROD=true
       - ADDRESS=0.0.0.0:10002
@@ -54,7 +54,8 @@ services:
       - API_GET_TOPIC=http://localhost:8082/topics
       - API_POST_PUBLISH=http://localhost:8082/publisher
       - API_POST_SESSION=http://localhost:8082/sessions
-    network_mode: host
+    networks:
+      - broker
 
 #  broker-management:
 #    image: broker-management
