refactor: change publish,topics and sessions

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ API_ADDRESS=0.0.0.0:8080
 API_GET_TOPIC=http://localhost:8080/topics
 API_POST_PUBLISH=http://localhost:8080/publisher
 API_POST_SESSION=http://localhost:8080/sessions
-
+API_PUT_SESSION=http://localhost:8080/sessions
+API_DELETE_SESSION=http://localhost:8080/sessions
